--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: "3.6"
 
 services:
-    # ens-data-source:
-    #     image: dm3org/ens-bedrock-resolver:v0.1.1
-    #     restart: always
-    #     environment:
-    #         L2_PROVIDER_URL: "$L2_PROVIDER_URL"
-    #         L2_RESOLVER_ADDRESS: "$L2_RESOLVER_ADDRESS"
-    #     ports:
-    #         - "8887:8887"
+    ens-data-source:
+        image: dm3org/ens-bedrock-resolver:v0.1.1
+        restart: always
+        environment:
+            L2_PROVIDER_URL: "$L2_PROVIDER_URL"
+            L2_RESOLVER_ADDRESS: "$L2_RESOLVER_ADDRESS"
+        ports:
+            - "8887:8887"
 
     ccip-resolver:
-        image: dm3org/ccip-resolver:v0.1.3
+        image: dm3org/ccip-resolver:wip0.0.1
         restart: always
         environment:
             CONFIG: |
